testData/AChildOfConcordionTest.java
import concordion.ConcordionTest;

public class AChildOfConcordionTest extends ConcordionTest {
    public void greetingFor() {

    }

    <error descr="Unused method in concordion files">public void unusedMethod() {

    }</error>
}